objects/SGR_Product_Type__c.object
<CustomObject>
    <fields>
        <fullName>Key__c</fullName>
        <externalId>true</externalId>
        <label>Key</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Plan_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan Group</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Types</relationshipLabel>
        <relationshipName>Product_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>abbrevationCode__c</fullName>
        <description>Abbrevation code for the product type</description>
        <label>abbrevationCode</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>code__c</fullName>
        <externalId>true</externalId>
        <label>code</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <description>Detailed description of the product Type</description>
        <label>description</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Product Type</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Types</pluralLabel>
    <recordTypes>
        <fullName>SGR_Product_Type</fullName>
        <active>true</active>
        <label>SGR Product Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>